# PracticeMakemeGreat

OpenCL/sample_pi/: cl_spec.cpp  main.cpp  sample_pi.cl
cmake/: README.MD
cmake/01_basic/0-hello-cmake/: .main.cpp.swp  CMakeLists.txt  main.cpp
cmake/01_basic/1-hello-headers/: CMakeLists.txt
cmake/01_basic/1-hello-headers/src/: hello.cpp  main.cpp
cmake/01_basic/10-compile_features/: CMakeLists.txt  main.cpp
cmake/01_basic/2-C-static_library/: CMakeLists.txt
cmake/01_basic/2-C-static_library/src/: hello.cpp  main.cpp
cmake/01_basic/3-shared-library/: CMakeLists.txt
cmake/01_basic/3-shared-library/src/: main.cpp
cmake/01_basic/4-make-install/: CMakeLists.txt
cmake/01_basic/4-make-install/src/: hello.cpp
cmake/01_basic/5-cmake-compile-flags/: CMakeLists.txt  main.cpp
cmake/01_basic/6-third-party-library/: CMakeLists.txt  main.cpp
cmake/01_basic/7-compiling-with-clang/: CMakeLists.txt  usage
cmake/01_basic/8-common-method/: CMakeLists.txt
cmake/01_basic/9-cxx-standard/: CMakeLists.txt
